--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "vue-my-datepicker",
-  "version": "0.1.3",
+  "version": "0.1.7",
   "private": false,
   "description": "this is a datetime picker for VUE",
   "main": "lib/vueMyDatepicker.umd.js",
-  "keyword": "vue datepicker datetimepicker picker",
+  "keywords": "vue datepicker datetimepicker picker",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -15,8 +15,8 @@
     "type": "git",
     "url": "https://github.com/biechao/vue-my-datetimepicker"
   },
-  "license": "MIT",
-  "author": "biechao(毛毛)",
+  "license":"MIT",
+  "author": "biechao(毛毛)",  
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.22",
     "@fortawesome/free-regular-svg-icons": "^5.10.2",
